test/files/neg/t9636.check
t9636.scala:13: warning: a type was inferred to be `AnyVal`; this may indicate a programming error.
    if (signature.sameElements(Array(0x1F, 0x8B))) {
                  ^
1 warning
error: No warnings can be incurred under -Werror.
